Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(11/29/13) - Improvements - Version 1.9.4.0

[+] Added front page setting notification to reading settings.
[+] Added support for paragraphs for the front page areas.
[*] Update German Translation.
[!] Fix placeholder + IE8 + The Event Calendar issue.
[*] Improve mobile menu title.

----

(10/28/13) - Improvements - Version 1.9.3.9

[+] Added footer widget area.
[+] Added Id's to home widgets.
[+] Added h3 tags to widgets.
[x] Removed 100% width from input form fields.
[*] Plugin notification is made to be displayed only to admin.
[*] Updated language files.
[!] Fixed if else structure.
[!] Fixed Image map area.
[*] Widgets - Added better descriptions.

----

(10/04/13) - Improvements - Version 1.9.3.8

http://cyberchimps.com/guide/update-1-9-3-8/

[*] Spaces for indentation have been swapped out for tabs in the code.
[!] Fixed javascript bug that was preventing other javascripts from working correctly.

----

(09/26/13) - Improvements - Version 1.9.3.7

http://cyberchimps.com/guide/update-1-9-3-7/

[*] Set up icon links with new responsive_child_uri() function.
[+] Added function responsive_free_get_option() to get value of individual free option.
[+] Added title to blog post page.
[x] Removed trailing blank spaces.
[+] Added editor option type for Content area and Featured content options.

----

(08/21/13) - Improvements - Version 1.9.3.6

http://cyberchimps.com/guide/update-1-9-3-6/

[+] Themes page to appearance menu
[!] Fixed support and forum links.
[^] Moved plugin from theme to wordpress plugin repo.
[+] Added ability to add classes to options.
[*] Allowed call to action update without home content.

----

(08/06/13) - Improvements - Version 1.9.3.5

http://cyberchimps.com/guide/update-1-9-3-5/

[+] Added rtl css support.
[+] Added cyberchimps logo to footer.
[+] Added option class to define theme options.
[+] Added support for companion plugin.