@@ -219,14 +219,6 @@
 		text-align: center;
 	}
 
-	.tinynav {
-		display: block;
-	}
-
-	.sb-holder {
-		display: block;
-	}
-
 	#author-meta {
 		padding: 20px;
 	}
