@@ -8,6 +8,16 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(12/08/13) - Improvements - Version 1.9.4.1
+
+[+] Added `featured-content` id to front-page.
+[*] Updated Welsh, Russian and Greek translations.
+[!] Fixed the footer widget with adding fit class to third widget.
+[x] Removed duplicated theme options titles.
+[x] Removed old mobile menu css.
+
+----
+
 (11/29/13) - Improvements - Version 1.9.4.0
 
 [+] Added front page setting notification to reading settings.
